fix header-nav bg not covering full height

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -35,7 +35,7 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: 100;
   flex-direction: column;
   justify-content: center;
